; ModuleID = '/home/carl/AnghaBench/proxychains-ng/tests/extr_test_gethostbyname.c_main.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/tests/extr_test_gethostbyname.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.hostent*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %21

10:                                               ; preds = %2
  %11 = load i8**, i8*** %5, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 1
  %13 = load i8*, i8** %12, align 8
  %14 = call %struct.hostent* @gethostbyname(i8* %13)
  store %struct.hostent* %14, %struct.hostent** %6, align 8
  %15 = load %struct.hostent*, %struct.hostent** %6, align 8
  %16 = icmp ne %struct.hostent* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %10
  %18 = load %struct.hostent*, %struct.hostent** %6, align 8
  %19 = call i32 @printhostent(%struct.hostent* %18)
  br label %20

20:                                               ; preds = %17, %10
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %20, %9
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @printhostent(%struct.hostent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
